<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">Submission3</string>
    <!-- Splash Screen -->
    <string name="github">Github</string>
    <string name="icon">Icon</string>
    <!-- Home -->
    <string name="cari_user">Cari user</string>
    <string name="best_developer">Top 11 Best Developer</string>
    <string name="recommendation">People You May Know</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- User -->
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">repository</string>
    <string name="gist">gist</string>
    <string name="follower">followers</string>
    <string name="following">following</string>
    <string name="n_repository">0 repository</string>
    <string name="n_gist">0 gist</string>
    <string name="n_follower">0 followers</string>
    <string name="n_following">0 following</string>
    <string name="dot">•</string>
    <!-- Button -->
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="open_ig">Open Instagram</string>
    <string name="open_github">Open Github</string>
    <string name="clear_all">Remove All</string>
</resources>