<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultViewGroup"
    tools:context=".ui.profile.ProfileActivity">

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/custom_action_bar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_image"
        style="@style/Content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="115dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_avatar"
        style="@style/CircleImage"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/action_bar_layout"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/profile_name"
        style="@style/Content.Medium"
        android:text="@string/name"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_mid_image"
        app:layout_constraintStart_toEndOf="@id/profile_avatar"/>

    <TextView
        android:id="@+id/profile_username"
        style="@style/Content.Small.Gray"
        android:text="@string/username"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/profile_name"
        app:layout_constraintTop_toTopOf="@id/profile_name"
        app:layout_constraintBottom_toBottomOf="@id/profile_name"/>

    <TextView
        android:id="@+id/profile_company"
        style="@style/Content.Small.Gray"
        android:text="@string/company"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_mid_image"
        app:layout_constraintStart_toEndOf="@id/profile_avatar"/>

    <TextView
        android:id="@+id/dot"
        style="@style/Content.Small"
        android:text="@string/dot"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/profile_company"
        app:layout_constraintBottom_toBottomOf="@+id/profile_company"
        app:layout_constraintStart_toEndOf="@+id/profile_company" />

    <TextView
        android:id="@+id/profile_location"
        style="@style/Content.Small.Gray"
        android:text="@string/location"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/dot"
        app:layout_constraintBottom_toBottomOf="@+id/dot"
        app:layout_constraintStart_toEndOf="@+id/dot" />

    <Button
        android:id="@+id/profile_button"
        style="@style/Content.Button"
        android:text="@string/open_ig"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        app:layout_constraintTop_toBottomOf="@id/profile_avatar"/>

</androidx.constraintlayout.widget.ConstraintLayout>