<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RowContent"
    android:layout_margin="6dp"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_avatar"
        style="@style/CircleImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/user_name"
        style="@style/Content.Medium"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/user_avatar"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        android:text="@string/name" />

    <TextView
        android:id="@+id/user_username"
        style="@style/Content.Small.Gray"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/user_name"
        app:layout_constraintBottom_toBottomOf="@+id/user_name"
        app:layout_constraintStart_toEndOf="@+id/user_name"
        android:text="@string/username" />

    <ImageView
        android:id="@+id/ic_office"
        style="@style/IconProfile.CardView"
        android:src="@drawable/ic_office"
        android:contentDescription="@string/icon"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintStart_toEndOf="@+id/user_avatar" />

    <TextView
        android:id="@+id/user_company"
        style="@style/Content.Small.Limited"
        android:layout_marginStart="8dp"
        android:text="@string/company"
        app:layout_constraintTop_toTopOf="@+id/ic_office"
        app:layout_constraintBottom_toBottomOf="@+id/ic_office"
        app:layout_constraintStart_toEndOf="@+id/ic_office" />

    <ImageView
        android:id="@+id/ic_location"
        style="@style/IconProfile.CardView"
        android:src="@drawable/ic_location"
        android:contentDescription="@string/icon"
        app:layout_constraintTop_toBottomOf="@+id/ic_office"
        app:layout_constraintStart_toEndOf="@+id/user_avatar" />

    <TextView
        android:id="@+id/user_location"
        style="@style/Content.Small.Limited"
        android:layout_marginStart="8dp"
        android:text="@string/location"
        app:layout_constraintTop_toTopOf="@+id/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/ic_location"
        app:layout_constraintStart_toEndOf="@+id/ic_location" />

    <ToggleButton
        android:id="@+id/toggle_button"
        style="@style/CircleImage.Tiny"
        android:background="@drawable/favorite_selector"
        android:textOff=""
        android:textOn=""
        app:layout_constraintTop_toTopOf="@id/user_avatar"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>