<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultViewGroup"
    tools:context=".ui.detail.DetailActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/DefaultViewGroup" >

        <include
            android:id="@+id/action_bar_layout"
            layout="@layout/custom_action_bar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:orientation="vertical"
            style="@style/Content"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:orientation="vertical"
            style="@style/Content"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_mid_image"
            style="@style/Content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="115dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_avatar"
            style="@style/CircleImage"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/action_bar_layout"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detail_name"
            style="@style/Content.Big"
            android:text="@string/name"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@id/guideline_mid_image"
            app:layout_constraintStart_toEndOf="@id/detail_avatar"/>

        <TextView
            android:id="@+id/detail_username"
            style="@style/Content.Small.Gray"
            android:text="@string/username"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/guideline_mid_image"
            app:layout_constraintStart_toEndOf="@id/detail_avatar"/>

        <ImageView
            android:id="@+id/ic_office"
            style="@style/IconProfile"
            android:src="@drawable/ic_office"
            android:contentDescription="@string/icon"
            app:layout_constraintTop_toBottomOf="@+id/detail_avatar"
            app:layout_constraintStart_toStartOf="@id/guideline_left" />

        <TextView
            android:id="@+id/detail_company"
            style="@style/Content.Small"
            android:text="@string/company"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/ic_office"
            app:layout_constraintBottom_toBottomOf="@+id/ic_office"
            app:layout_constraintStart_toEndOf="@+id/ic_office" />

        <ImageView
            android:id="@+id/ic_location"
            style="@style/IconProfile"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/icon"
            app:layout_constraintTop_toBottomOf="@+id/ic_office"
            app:layout_constraintStart_toEndOf="@+id/guideline_left" />

        <TextView
            android:id="@+id/detail_location"
            style="@style/Content.Small"
            android:text="@string/location"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/ic_location"
            app:layout_constraintBottom_toBottomOf="@+id/ic_location"
            app:layout_constraintStart_toEndOf="@+id/ic_location" />

        <ImageView
            android:id="@+id/ic_people_networking"
            style="@style/IconProfile"
            android:src="@drawable/ic_people_networking"
            android:contentDescription="@string/icon"
            app:layout_constraintTop_toBottomOf="@+id/ic_location"
            app:layout_constraintStart_toEndOf="@+id/guideline_left" />

        <TextView
            android:id="@+id/detail_follower"
            style="@style/Content.Small"
            android:text="@string/n_follower"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/ic_people_networking"
            app:layout_constraintBottom_toBottomOf="@+id/ic_people_networking"
            app:layout_constraintStart_toEndOf="@+id/ic_people_networking" />

        <TextView
            android:id="@+id/dot_1"
            style="@style/Content.Small"
            android:text="@string/dot"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/detail_follower"
            app:layout_constraintBottom_toBottomOf="@+id/detail_follower"
            app:layout_constraintStart_toEndOf="@+id/detail_follower" />

        <TextView
            android:id="@+id/detail_following"
            style="@style/Content.Small"
            android:text="@string/n_following"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/dot_1"
            app:layout_constraintBottom_toBottomOf="@+id/dot_1"
            app:layout_constraintStart_toEndOf="@+id/dot_1" />

        <ImageView
            android:id="@+id/ic_repository"
            style="@style/IconProfile"
            android:src="@drawable/ic_repository"
            android:contentDescription="@string/icon"
            app:layout_constraintTop_toBottomOf="@+id/ic_people_networking"
            app:layout_constraintStart_toEndOf="@+id/guideline_left" />

        <TextView
            android:id="@+id/detail_repository"
            style="@style/Content.Small"
            android:text="@string/n_repository"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/ic_repository"
            app:layout_constraintBottom_toBottomOf="@+id/ic_repository"
            app:layout_constraintStart_toEndOf="@+id/ic_repository" />

        <TextView
            android:id="@+id/dot_2"
            style="@style/Content.Small"
            android:text="@string/dot"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/detail_repository"
            app:layout_constraintBottom_toBottomOf="@+id/detail_repository"
            app:layout_constraintStart_toEndOf="@+id/detail_repository" />

        <TextView
            android:id="@+id/detail_gist"
            style="@style/Content.Small"
            android:text="@string/n_gist"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/dot_2"
            app:layout_constraintBottom_toBottomOf="@+id/dot_2"
            app:layout_constraintStart_toEndOf="@+id/dot_2" />

        <Button
            android:id="@+id/detail_button"
            style="@style/Content.Button"
            android:layout_width="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/open_github"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/ic_repository" />

        <ProgressBar
            android:id="@+id/progress_bar_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar_layout"
            app:layout_constraintBottom_toTopOf="@id/detail_button"
            tools:visibility="visible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/RowContent"
            android:layout_marginTop="12dp"
            android:background="@color/dark_1"
            app:tabIndicatorColor="@color/blue"
            app:tabTextColor="@color/blue"
            app:tabSelectedTextColor="@color/blue_light"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/detail_button" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            style="@style/RowContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>